# exidle

./: Cargo.toml  README.md
exidle-client/: Cargo.toml
exidle-server/: Cargo.toml
exidle-server/src/: lib.rs  main.rs
exidle-server/src/items/: mod.rs
exidle-server/src/player/: mod.rs
