[package]
name = "exidle-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
clap = { version = "4.3.19", features = ["derive"] }
log = "0.4.19"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.181", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
